Fix a wrong padding on tablets for modal dialogs

--- a/src/styles/materialize.less
+++ b/src/styles/materialize.less
@@ -13,10 +13,8 @@
 
 .modal .modal-content {
   padding: @space-large;
-  @media @screen-tablets-landscape {
-    padding: 24px;
-  }
 }
+
 .modal.modal-fixed-footer {
   height: @max-height-mobile;
   @media @screen-tablets-landscape {
